ckanext/cadasta/fanstatic/customCSS.css
/* ... */
#project-title {
    border-bottom: 1px solid #dcdfe1;
}

.span3 {
    width: 100%;
    margin:0;
    margin-top: 13px;
    /* min-height:220px; */
    margin-bottom:50px;
}

ul {
    list-style-type: none;
}


/* top nav toolbar */

.masthead-header {
    background-color:#2d3644;
    height: 45px;
    text-align: center;
}

header .header-container {
    width:1024px;
    margin: auto;
    height:100%

}

.masthead-header span {
    padding-right: 35px;
    padding-top: 14px;
    display: inline-block;
    float:left;
}


.masthead-header ul li {
    padding-right: 35px;
    display: inline-block;
    float:left;
}

.masthead-header ul li a {
    color: #858c92;
    font-weight: semi-bold;
    font-size: 12px;
    text-decoration: none;
}


/* Sarah's row modification.  Putting it back to default to we don't throw of the default CKAN look and feel. */
/*.row {*/
    /*height:0;*/
    /*border:none;*/
    /*background-color: #eef2f5;*/
    /*width:860px;*/
    /*border: none;*/
/*}*/

.row {
margin-left: -20px;
}

#content {
    width: 860px;
}

li {
    display: inline-block;
}

.block {
    display: block;
}

.bold {
    font-weight:bold;
}

.link {
    color: #3c95c1;
}


.toolbar .breadcrumb a {
    font-size: 10px;
    font-family: 'Open Sans';
    color: #256c97;

}

.toolbar .breadcrumb {
    padding:0;
    margin:0;
    background-color:white;
    height:25px;
    line-height: 0;
}

.toolbar {
    padding:0;
    border-top: 1px solid #dcdfe1;
    border-left: 1px solid #dcdfe1;
    border-right: 1px solid #dcdfe1;
}



#project-desc {
    width: 517px;
    display: inline-block;
    height: 292px;
    border: 1px solid #dcdfe1;
}

#project-desc .small-heading {
    margin: 20px 0 20px 20px;
}

#project-desc table {
    text-align: center;
    text-align: left;
    margin-left: 20px;
    width:40%;
    border:none;

}

#project-desc table td {
    text-align: center;
    text-align: left;
    margin-left: 20px;
    width: 100px;

}

/* RW - removed fixed height so activity feed will push down without an internal scrollbar */
#project-activity-summary {
    width:510px;
    padding-top:12px;
    padding-left:25px;
    float:left;
    border: 1px solid #dcdfe1;

}


footer {
    background-color: #eef2f5;
    height: 50px;
    width:100%;
    bottom:0;
    position: fixed;
    border-top: 1px solid #dcdfe1;
}

.project-control-buttons-right {
    display: inline-block;
    float: right;
    padding-top:18px;
    padding-right: 25px;
}

.project-control-buttons-right span {
    margin-left: 8px;
}

#project-header {
    height:315px;
}

#project-nav-bar li {
    vertical-align:bottom;
    margin-right: 40px;
}

.section .site-search .simple-input {
    display: inline;
}

#project-nav-bar li a {
    color: #2d3644;
    font-weight: semi-bold;
    text-decoration: none;

}

#project-nav-bar li a:hover {
    color: #256c97;
    font-weight: bold;
    border-bottom: 2px solid #256c97;
    text-decoration: none;
}

#project-nav-bar li a:active {
    color: #256c97;
    font-weight: bold;
    border-bottom: 2px solid #256c97;
    text-decoration: none;
}


#content {
    background-color:#eef2f5;
}


.module-content:last-child {
    margin-bottom: 0;
     padding-bottom: 0;
}

#main-div {
    background-image: none;
    background-color:#eef2f5;
}

.nav-tabs {
    border-bottom: none;
}

header .page-header-new {
    border: 1px solid #dcdfe1;
    height:135px;
}

ul, ol {
     padding: 0;
     margin: 0;
}


.masthead .nav-collapse {
    width: 800px;
    float: right;
    background-color: yellow;
}

form .lang-select {
    margin:0;
    display:inline-block;
}

.field {
    margin:0;
}

#language-selector {
    margin-left:20px;
    padding-top:16px;
}



#footer-container {
    height:50px;
    vertical-align:center;
    color:black;
    background-color: #eef2f5;
    width: 1024px;
    margin: auto;
}

#footer-container div {
    display:inline-block;
    float:left;
}

#footer-container #footer-logo {
    font-size: 26px;
    color: black;
    float: right;
    display: block;
    padding-top: 14px;
}

.search-field {
    padding-left: 50px;
    padding-top: 45px;
    margin:0;
    padding-bottom:0;
}

.activity-block {
    display: block;
    width: 90%;
    border-bottom: 1px solid #dcdfe1;
    height: 35px;
}

.resource-block {
    display: block;
    width: 90%;
    height: 35px;
}


#field-sitewide-search {
    width: 100px;
}


#header-logo {
    padding-left: 20px;
    float: left;
}

#header-profile-options {
    padding-right: 0;
    float: right;
    max-width: 80px;
}


.toolbar .breadcrumb li:after {
    content: "";
    padding: 0;
    margin: 0;
    font-size: 8px;
    font-weight: bold;
}

input[type="text"] {
    margin: 0;
}

.search-box-field{
    padding-bottom: 5px;
    padding-left: 40px;
}


.table {
    margin:auto;
}


.table tr th {
    font-size: 12px;
    color: white;
    background-color: #51617A;
    font-weight: 400;
    text-align: center;

}


.table tr {
    border: 1px solid #dcdfe1;
}

.table tr td {
    font-size: 10px;
    color: black;
    background-color: white;
    text-align: center;
}



#project-result-text {
    padding-left:20px;
    font-size: 14px;
}

#all-rights-reserved {
    padding-top: 16px;
}

.header-container span ul li {
    padding-right: 0;
    margin-right: 35px;
    margin-bottom: 10px;
    height: 21px;
    cursor: pointer;
}

.header-container span ul li:hover {
    border-bottom: 2px solid white;
    font-weight: semi-bold;
    text-decoration: none;
}

.header-container span ul li:active {
    border-bottom: 2px solid white;
    font-weight: semi-bold;
    text-decoration: none;
}

.search-form .control-order-by {
    margin-right:20px;
}

dataset-list {
    padding-bottom: 20px;
}

.toolbar .breadcrumb .active a, .toolbar .breadcrumb a.active {
    font-weight: bold;
    color: #8b8b8b;
}

#profile_options {
    margin-right: 15px;
}

#about-button {
    margin-right: 15px;
}
/* ... */

